k3s/management/traefik/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-auth
  namespace: management
spec:
  basicAuth:
    secret: traefik-dashboard-auth
